[package]
name = "feu"
version = "0.1.1"
edition = "2021"
authors = ["Kyohei Uto <kyoheiu@outlook.com>"]
description = "minimal application launcher for tiling window manager"
readme = "README.md"
repository = "https://github.com/kyoheiu/feu"
license = "MIT"
keywords = ["gui", "launcher"]

[dependencies]
dirs = "4.0.0"
iced = "0.4.2"
iced_native = "0.5.1"
miniserde = "0.1.24"
rayon = "1.5.3"
thiserror = "1.0.31"
