[package]
name = "feu"
version = "0.2.0"
edition = "2021"
authors = ["Kyohei Uto <kyoheiu@outlook.com>"]
description = "minimal application launcher for tiling window managers"
readme = "README.md"
repository = "https://github.com/kyoheiu/feu"
license = "MIT"
keywords = ["gui", "launcher"]

[dependencies]
dirs = "4.0.0"
iced = "0.4.2"
iced_native = "0.5.1"
miniserde = "0.1.24"
